<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/action_map_location"
        android:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:title="@string/current_locate_weather"
        android:icon="@android:drawable/ic_menu_rotate"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never"
        android:title="@string/settings" />
    <item
        android:id="@+id/action_list_city"
        android:orderInCategory="90"
        android:title="@string/list_city"
        app:showAsAction="never" />
</menu>