<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.gardenweather3.MainFragment"
        android:label="@string/weather"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_list_city"
        android:name="com.example.gardenweather3.CityListFragment"
        android:label="@string/list_city"
        tools:layout="@layout/fragment_city_list" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.gardenweather3.SettingsFragment"
        android:label="@string/settings" />
</navigation>