<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    app:cardElevation="3dp">

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView1"
            style="@style/style_image"
            android:contentDescription="@string/image_desc"
            app:srcCompat="@drawable/ic_sunny" />

        <TextView
            android:id="@+id/item_list_cites"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="16dp"
            android:text="@string/default_current_city"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="16dp"
            android:text="@string/default_current_temp"
            android:textAlignment="textEnd"
            android:textSize="30sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>